--- a/src/src/Dotnet9.Blazor/Pages/Public/WeChatOfficialAccount.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/WeChatOfficialAccount.razor
@@ -1,5 +1,5 @@
-﻿<Card Margin="Margin.Is2.FromLeft.Is2.FromRight.Is2.FromBottom" Padding="Padding.Is2">
-    <CardTitle>Dotnet9</CardTitle>
+﻿<Card Margin="Margin.Is2.FromLeft.Is2.FromRight.Is2.FromBottom">
+    <CardHeader>Dotnet9</CardHeader>
     <CardImage Source="https://img1.dotnet9.com/wechatpublic.jpg" width="280" Alt="Dotnet9"></CardImage>
     <CardBody>
         <CardTitle Size="5">Code scanning attention</CardTitle>
@@ -8,8 +8,8 @@
         </CardText>
     </CardBody>
 </Card>
-<Card Margin="Margin.Is2.FromLeft.Is2.FromRight.Is2.FromTop" Padding="Padding.Is2">
-    <CardTitle>QQ Group</CardTitle>
+<Card Margin="Margin.Is2.FromLeft.Is2.FromRight.Is2.FromTop">
+    <CardHeader>QQ Group</CardHeader>
     <CardImage Source="https://img1.dotnet9.com/qqgoup1.png" width="280" Alt="Dotnet9"></CardImage>
     <CardBody>
         <CardTitle Size="5">Code scanning attention</CardTitle>
