add blog list hover;

--- a/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
@@ -21,7 +21,7 @@
                 <ul>
                     @foreach (var blogPostDto in BlogPostListItems)
                     {
-                        <li>
+                        <li class="hvr-wobble-bottom">
                             <Card>
                                 <CardHeader>
                                     <h3 class="blogtitle">
