--- a/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
+++ b/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
@@ -20,6 +20,7 @@
     <abp-style-bundle name="@BlazorBasicThemeBundles.Styles.Global"/>
     <link href="_content/Blazorise.TreeView/blazorise.treeview.css" rel="stylesheet"/>
     <link href="~/libs/easymde/dist/easymde.min.css" rel="stylesheet"/>
+    <link href="~/libs/Hover/hover-min.css" rel="stylesheet"/>
     <script src="~/libs/easymde/dist/easymde.min.js"></script>
     <script>
         var _hmt = _hmt || [];
