Remove inactive highlightjs;

--- a/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
@@ -21,10 +21,10 @@
                 <ul>
                     @foreach (var blogPostDto in BlogPostListItems)
                     {
-                        <li class="hvr-wobble-bottom">
+                        <li>
                             <Card>
                                 <CardHeader>
-                                    <h3 class="blogtitle">
+                                    <h3 class="blogtitle hvr-wobble-bottom">
                                         <a href="/@blogPostDto.Slug">@blogPostDto.Title</a>
                                     </h3>
                                 </CardHeader>
