--- a/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
+++ b/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
@@ -22,6 +22,16 @@
     <link href="~/libs/easymde/dist/easymde.min.css" rel="stylesheet"/>
     <link href="~/libs/Hover/hover-min.css" rel="stylesheet"/>
     <script src="~/libs/easymde/dist/easymde.min.js"></script>
+    
+    <!--masa blazor css style-->
+    <link href="_content/MASA.Blazor/css/masa-blazor.css" rel="stylesheet" />
+    <link href="_content/MASA.Blazor/css/masa-extend-blazor.css" rel="stylesheet" />
+    <!--icon file,import need to use-->
+    <link href="https://cdn.jsdelivr.net/npm/@("@mdi")/font@6.x/css/materialdesignicons.min.css"
+          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet" />
+
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -54,3 +64,4 @@
 <div style="text-align: center">
     <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278208054'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278208054%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
 </div>
+<script src="_content/BlazorComponent/js/blazor-component.js"></script>
