--- a/src/src/Dotnet9.Blazor/Pages/Index.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Index.razor
@@ -1,8 +1,50 @@
 ﻿@page "/"
 @using Dotnet9.Blazor.Pages.Public
-@using Volo.Abp.MultiTenancy
 @inherits Dotnet9ComponentBase
-@inject ICurrentTenant CurrentTenant
-@inject AuthenticationStateProvider AuthenticationStateProvider
 
-<BlogPostList />
+<MApp>
+    <MAppBar ElevateOnScroll Color="white" App>
+        <MAppBarNavIcon @onclick="() => _drawer = !_drawer"></MAppBarNavIcon>
+        <PublicHeader/>
+    </MAppBar>
+    <MSystemBar Dark Color="primary" Height="30" Class="d-none d-sm-none d-md-flex">
+        <MSpacer></MSpacer>
+        <MIcon>mdi-message</MIcon>
+        <span style="color: white;">网站开发中，联系方式如下</span>
+    </MSystemBar>
+    <MNavigationDrawer @bind-Value="_drawer" App>
+        <MListItem>
+            <MListItemContent>
+                <MListItemTitle class="text-h6">
+                    Dotnet9
+                </MListItemTitle>
+                <MListItemSubtitle>
+                    业精于勤而荒于嬉
+                </MListItemSubtitle>
+            </MListItemContent>
+        </MListItem>
+
+        <MDivider/>
+
+        <MList Dense Nav>
+            <MListItem Link>
+                <MListItemContent>
+                    <MListItemTitle>Test</MListItemTitle>
+                </MListItemContent>
+            </MListItem>
+        </MList>
+        <CategorySidebar/>
+    </MNavigationDrawer>
+
+    <MMain>
+        <BlogPostList/>
+    </MMain>
+    <MFooter App Class="text-center">
+        <PublicFooter/>
+    </MFooter>
+</MApp>
+
+@code
+{
+    private bool _drawer = true;
+}
