--- a/src/src/Dotnet9.Blazor/Pages/Index.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Index.razor
@@ -39,8 +39,10 @@
     <MMain>
         <BlogPostList/>
     </MMain>
-    <MFooter App Class="text-center">
-        <PublicFooter/>
+    <MFooter Padless App>
+        <MCol Class="text-center m-0 p-0" Cols="12">
+            <PublicFooter/>
+        </MCol>
     </MFooter>
 </MApp>
 
