--- a/src/src/Dotnet9.Blazor/Pages/Public/PublicHeader.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/PublicHeader.razor
@@ -1,4 +1,11 @@
 ﻿<MAppBarTitle>Dotnet9</MAppBarTitle>
+<MToolbarItems Class="hidden-sm-and-down">
+    <MButton Text>Home</MButton>
+    <MButton Text>Blog</MButton>
+    <MButton Text>Privacy</MButton>
+    <MButton Text>About</MButton>
+    <MButton Text>Contact US</MButton>
+</MToolbarItems>
 <MSpacer></MSpacer>
 <BlogSearch/>
 <div class="d-none d-sm-none d-md-flex">
