--- a/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
@@ -14,12 +14,12 @@
         <MCard>
             @if (BlogPostListItems != null)
             {
-                <MRow Class="mt-4">
+                <MRow>
                     @foreach (var blogPostDto in BlogPostListItems)
                     {
                         <MCol Class="col-xl-3 col-lg-4 col-sm-6 col-12 text-truncate">
 
-                            <MCard Class="mx-auto" Outlined>
+                            <MCard Class="m-0 p-0" Outlined>
                                 <MImage Class="align-end hvr-float-shadow" src="@blogPostDto.CoverImageUrl">
                                     <MToolbarTitle Class="ml-0 mt-1 mb-1 pt-0 pb-0 pl-2 text-h6 white--text bg-black bg-opacity-25">
                                         <a style="text-decoration: none; color: #fff;" href="/@blogPostDto.Slug">WPF</a>
