Upgrade Net 7.0 and other nuget packages;

--- a/src/src/Dotnet9.Blazor/Pages/Public/PublicHeader.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/PublicHeader.razor
@@ -11,7 +11,7 @@
 <div class="d-none d-sm-none d-md-flex">
     <MTooltip Bottom>
         <ActivatorContent>
-            <MButton Icon Href="https://github.com/dotnet9/dotnet9.com" Target="_blank" Class="mr-6">
+            <MButton Icon Href="https://github.com/dotnet9/dotnet9.com" Target="_blank">
                 <MIcon Size=24 Color="black">fab fa-github</MIcon>
             </MButton>
         </ActivatorContent>
@@ -21,7 +21,7 @@
     </MTooltip>
     <MTooltip Bottom>
         <ActivatorContent>
-            <MButton Icon Href="https://gitee.com/dotnet9/dotnet9.com" Target="_blank" Class="mr-6">
+            <MButton Icon Href="https://gitee.com/dotnet9/dotnet9.com" Target="_blank">
                 <img style="width: 24px; height: 24px;" src="https://img1.dotnet9.com/2022/01/gitee.png" alt="Gitee">
             </MButton>
         </ActivatorContent>
