--- a/src/src/Dotnet9.Blazor/Pages/Public/PublicFooter.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/PublicFooter.razor
@@ -1,5 +1,5 @@
 ﻿本站由&nbsp;
-<a href="https://dotnet.microsoft.com/en-us/download/dotnet/6.0" alt=".Net 6.0" target="_blank" rel=noopener noreferrer> .Net 6.0 </a>
+<a href="https://dotnet.microsoft.com/en-us/download/dotnet/6.0" alt=".Net 7.0" target="_blank" rel=noopener noreferrer> .Net 7.0 </a>
 &nbsp;强力驱动，并基于&nbsp;
 <a href="https://abp.io/" alt="ABP vNext" target="_blank" rel=noopener noreferrer> ABP vNext </a>
 &nbsp;+&nbsp;
@@ -7,7 +7,7 @@
 &nbsp;搭建，本站源代码&nbsp;
 <MTooltip Top>
     <ActivatorContent>
-        <MButton Icon Href="https://github.com/dotnet9/dotnet9.com" Target="_blank" Class="mr-6">
+        <MButton Icon Href="https://github.com/dotnet9/dotnet9.com" Target="_blank">
             <MIcon Size=24 Color="black">fab fa-github</MIcon>
         </MButton>
     </ActivatorContent>
@@ -17,7 +17,7 @@
 </MTooltip>
 <MTooltip Top>
     <ActivatorContent>
-        <MButton Icon Href="https://gitee.com/dotnet9/dotnet9.com" Target="_blank" Class="mr-6">
+        <MButton Icon Href="https://gitee.com/dotnet9/dotnet9.com" Target="_blank">
             <img style="width: 24px; height: 24px;" src="https://img1.dotnet9.com/2022/01/gitee.png" alt="Gitee">
         </MButton>
     </ActivatorContent>
