add upgrade dotnet 7 post;

--- a/src/src/Dotnet9.Blazor/Pages/Public/BlogPost.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/BlogPost.razor
@@ -112,10 +112,25 @@
             }
         </MCard>
         <MCard Class="text-center">
-            <MButton Icon Color="deep-orange">
-                <MIcon>mdi-thumb-up</MIcon>
+            <MButton Icon>
+                <MIcon>mdi-eye</MIcon>
             </MButton>
-            赞(0)
+            <span class="subheading mr-2">63</span>
+            <span class="mr-1">·</span>
+            <MButton Icon>
+                <MIcon>mdi-heart</MIcon>
+            </MButton>
+            <span class="subheading mr-2">6</span>
+            <span class="mr-1">·</span>
+            <MButton Icon>
+                <MIcon>mdi-bookmark</MIcon>
+            </MButton>
+            <span class="subheading mr-2">13</span>
+            <span class="mr-1">·</span>
+            <MButton Icon>
+                <MIcon>mdi-share-variant</MIcon>
+            </MButton>
+            <span class="subheading">9</span>
         </MCard>
     </Column>
     <Column ColumnSize="ColumnSize.Is2.OnDesktop">
