--- a/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
@@ -43,11 +43,13 @@
                                     <span class="mr-1">·</span>
                                     <MButton Icon>
                                         <MIcon>mdi-bookmark</MIcon>
-                                    </MButton><span class="subheading mr-2">13</span>
+                                    </MButton>
+                                    <span class="subheading mr-2">13</span>
                                     <span class="mr-1">·</span>
                                     <MButton Icon>
                                         <MIcon>mdi-share-variant</MIcon>
-                                    </MButton><span class="subheading">9</span>
+                                    </MButton>
+                                    <span class="subheading">9</span>
                                 </MCardActions>
                                 <MDivider Class="m-0 p-0"></MDivider>
                                 <MCardActions Class="m-0 pt-0 pb-0 pr-2">
